[package]
name = "todoapp"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = [ "full" ] }
futures = "0.3"
# JSON libs
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
# Web libs
warp = "0.3"
# DB libs
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
# utils
thiserror = "1.0"